# pacrops

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.c  pacropper.py  pacrops.py
examples/: simple_usage.py
src/: binary.rs  gadget.rs  main.rs  output.rs  pac.rs  tests.rs  types.rs
