[package]
name = "pacrops"
version = "0.1.0"
edition = "2021"
authors = ["Pacropper Contributors"]
description = "PAC-aware ROP gadget finder for ARM64 binaries with Pointer Authentication Code (PAC) vulnerability detection"
license = "MIT"
repository = "https://github.com/yourusername/pacrops"
keywords = ["security", "arm64", "rop", "pac", "exploitation"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
capstone = "0.13.0"
object = "0.37.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
